# zinsserbench

./: AGENTS.md  README.md  TODO.md  pyproject.toml
benchmark_versions/v0.1/: judges.json  models.json  rubric.json
benchmark_versions/v0.2/: judges.json  prompts.json
docs/2026-03-07-openrouter-v0-1/: index.md
docs/2026-03-07-openrouter-v0-1-salvage-1/: index.md
docs/2026-03-08-openrouter-v0-2-clean-3/: index.md
runs/2026-03-07-openrouter-v0-1/: manifest.json
runs/2026-03-07-openrouter-v0-1-salvage-1/: manifest.json
runs/2026-03-07-openrouter-v0-1-salvage-1/analysis/: REPORT.md  judge_quality.csv  model_prompt_details.csv  quarantined_outputs.csv  response_lengths_by_model.csv  summary.json  writing_by_model.csv  writing_by_model_axis.csv  writing_by_model_category.csv  writing_by_model_prompt.csv  writing_by_prompt_axis.csv
runs/2026-03-07-openrouter-v0-1/analysis/: REPORT.md  judge_quality.csv  model_prompt_details.csv  response_lengths_by_model.csv  summary.json  writing_by_model.csv  writing_by_model_axis.csv  writing_by_model_category.csv  writing_by_model_prompt.csv  writing_by_prompt_axis.csv
runs/2026-03-08-openrouter-v0-2-clean-3/: manifest.json
runs/2026-03-08-openrouter-v0-2-clean-3/analysis/: REPORT.md  exact_cap_hits.csv  judge_quality.csv  model_prompt_details.csv  summary.json  (+8 more)
runs/example-v0-1-12-models/: manifest.json
scripts/: backfill_missing_judgments.py
src/zinsserbench/: __init__.py  aggregate.py  backends.py  cli.py  env.py  pipeline.py  quality.py  report.py  specs.py  storage.py  types.py
tests/: test_zinsserbench.py
(+5905 files in other folders)
