[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zinsserbench"
version = "0.1.0"
description = "Benchmark for evaluating AI models on nonfiction writing and model-based judging."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Simon Smith" }
]

[project.scripts]
zinsserbench = "zinsserbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
